; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_repo_config_get_int.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_repo_config_get_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repo_config_get_int(%struct.repository* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.repository*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store %struct.repository* %0, %struct.repository** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.repository*, %struct.repository** %4, align 8
  %8 = call i32 @git_config_check_init(%struct.repository* %7)
  %9 = load %struct.repository*, %struct.repository** %4, align 8
  %10 = getelementptr inbounds %struct.repository, %struct.repository* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @git_configset_get_int(i32 %11, i8* %12, i32* %13)
  ret i32 %14
}

declare dso_local i32 @git_config_check_init(%struct.repository*) #1

declare dso_local i32 @git_configset_get_int(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
